--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ border-radius:30px;
   </button>
   <p>Версия 0.0.3</p>
   <button>
-    <a href="v003.html">0.0.3</a>
+    <a href="v0.0.3/main.html">0.0.3</a>
   </button>
 </body>
 </html>
